# ros-bridge

carla_manual_control/launch/: carla_manual_control.launch.py
carla_manual_control/src/carla_manual_control/: carla_manual_control.py
carla_ros_bridge/launch/: carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch.py
carla_spawn_objects/config/: objects.json
carla_video_decode/src/: video_decoder.cpp
carla_video_encode/: CMakeLists.txt  package.xml
carla_video_encode/include/: video_encoder.hpp
carla_video_encode/src/: video_enc_node.cpp  video_encoder.cpp
